syntax = "proto3";

package comment.v1;
option go_package = "/comment/v1;commentV1";

import "google/protobuf/timestamp.proto";

service CommentService {
  // GetCommentList 获取一级评论
  rpc GetCommentList (GetCommentListRequest) returns (GetCommentListResponse);
  rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc CreateComment (CreateCommentRequest) returns (CreateCommentResponse);
  rpc GetMoreReplies (GetMoreRepliesRequest) returns (GetMoreRepliesResponse);
}

// 按照评论时间排序，在使用自增主键的情况下，实际上就是按照主键大小排序，正序
message GetCommentListRequest {
  string biz = 1;
  int64 bizid = 2;
  int64 min_id = 3;
  int64 limit = 4;
}

message GetCommentListResponse {
  repeated Comment comments = 1;
}

message DeleteCommentRequest {
  int64 id = 1;
}

message DeleteCommentResponse {

}

message CreateCommentRequest {
  Comment comment = 1;
}

message CreateCommentResponse {

}

message GetMoreRepliesRequest {
  int64 rid = 1;
  int64 min_id = 2;
  int64 limit = 3;
}

message GetMoreRepliesResponse {
  repeated Comment replies = 1;
}

message Comment {
  int64 id = 1;
  int64 uid = 2;
  string biz = 3;
  int64 bizid = 4;
  string content = 5;
  Comment root_comment = 6;
  Comment parent_comment = 7;
  // 正常来说，你在时间传递上，如果不想用 int64 之类的
  // 就可以考虑使用这个 Timestamp
//  repeated Comment children = 8;
  google.protobuf.Timestamp ctime = 9;
  google.protobuf.Timestamp utime = 10;
}